--- a/web/.eslintrc
+++ b/web/.eslintrc
@@ -2,36 +2,36 @@
 	"env": {
 		"browser": true,
 		"es2021": true,
-		"node": true,
+		"node": true
 	},
 	"extends": [
 		"eslint:recommended",
 		"plugin:solid/typescript",
 		"plugin:@typescript-eslint/recommended-type-checked",
 		"plugin:@typescript-eslint/stylistic-type-checked",
-		"prettier",
+		"prettier"
 	],
 	"overrides": [
 		{
 			"env": {
-				"node": true,
+				"node": true
 			},
 			"files": [".eslintrc.{js,cjs}"],
 			"parserOptions": {
-				"sourceType": "script",
-			},
-		},
+				"sourceType": "script"
+			}
+		}
 	],
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
 		"ecmaVersion": "latest",
 		"sourceType": "module",
-		"project": true,
+		"project": true
 	},
 	"plugins": ["@typescript-eslint", "solid"],
 	"rules": {
 		"@typescript-eslint/consistent-type-definitions": "off",
 		"no-unused-vars": "warn",
-		"@typescript-eslint/no-unused-vars": "warn",
-	},
+		"@typescript-eslint/no-unused-vars": "warn"
+	}
 }
