--- a/web/.prettierrc
+++ b/web/.prettierrc
@@ -16,7 +16,7 @@
 	"semi": true,
 	"singleAttributePerLine": true,
 	"singleQuote": false,
-	"trailingComma": "es5",
+	"trailingComma": "none",
 	"useTabs": true,
 	"tabWidth": 4,
 	"vueIndentScriptAndStyle": false
