--- a/web/package.json
+++ b/web/package.json
@@ -9,11 +9,13 @@
 	},
 	"dependencies": {
 		"@ark-ui/solid": "^2.2.0",
-		"@floating-ui/dom": "^1.6.4",
-		"@sinclair/typebox": "^0.32.27",
-		"@solidjs/meta": "^0.29.3",
+		"@eslint/js": "^9.3.0",
+		"@floating-ui/dom": "^1.6.5",
+		"@sinclair/typebox": "^0.32.30",
+		"@solidjs/meta": "^0.29.4",
 		"@solidjs/router": "^0.13.3",
 		"@solidjs/start": "1.0.0-rc.0",
+		"globals": "^15.2.0",
 		"lucide-solid": "^0.373.0",
 		"ramda": "^0.29.1",
 		"solid-floating-ui": "^0.3.1",
@@ -24,13 +26,13 @@
 	"devDependencies": {
 		"@babel/eslint-parser": "^7.24.5",
 		"@types/ramda": "^0.29.12",
-		"@typescript-eslint/eslint-plugin": "^7.8.0",
-		"@typescript-eslint/parser": "^7.8.0",
+		"@typescript-eslint/eslint-plugin": "^7.9.0",
+		"@typescript-eslint/parser": "^7.9.0",
 		"autoprefixer": "^10.4.19",
 		"babel-preset-solid": "^1.8.17",
 		"commitizen": "^4.3.0",
 		"cz-conventional-changelog": "^3.3.0",
-		"daisyui": "^4.10.3",
+		"daisyui": "^4.11.1",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-solid": "^0.13.2",
@@ -39,8 +41,8 @@
 		"prettier": "3.2.4",
 		"prettier-plugin-tailwindcss": "^0.5.14",
 		"tailwindcss": "^3.4.3",
-		"typescript": "^5.4.5",
-		"typescript-eslint": "^7.8.0",
+		"typescript": "5.5.0-dev.20240517",
+		"typescript-eslint": "^7.9.0",
 		"vite-tsconfig-paths": "^4.3.2"
 	},
 	"engines": {
