chore: update ts path

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -14,10 +14,7 @@
 		"isolatedModules": true,
 
 		"paths": {
-			"~/*": ["./src/*"],
-			"pages/*": ["./src/pages/*"],
-			"utils/*": ["./src/utils/*"],
-			"components/*": ["./src/components/*"]
+			"~/*": ["./src/*"]
 		}
 	}
 }
