ci: 添加方便的format语句

--- a/web/.github/workflows/github-actions-demo.yml
+++ b/web/.github/workflows/github-actions-demo.yml
@@ -10,6 +10,8 @@ jobs:
       - uses: oven-sh/setup-bun@v1
       # test build
       - run: bun install
+      # format
+      - run: bun run format
+      # TODO: test
+      # build
       - run: bun run build
-      # output info
-      - run: echo "${{ job.status }}"
