--- a/web/.github/workflows/github-actions-demo.yml
+++ b/web/.github/workflows/github-actions-demo.yml
@@ -1,17 +1,33 @@
 name: GitHub Actions
 run-name: TODO 🚀
-on: [push]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 jobs:
   TODO_Name:
     runs-on: ubuntu-latest
     steps:
-      # import
-      - uses: actions/checkout@v4
-      - uses: oven-sh/setup-bun@v1
-      # test build
-      - run: bun install
-      # format
-      - run: bun run format
-      # TODO: test
-      # build
-      - run: bun run build
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Install bun
+        uses: oven-sh/setup-bun@v1
+
+      - name: Install dependencies
+        run: bun install
+
+      - name: Prettier check
+        run: bun run prettier --check ./src
+
+      - name: Lint check
+        run: bun run eslint ./src
+
+      - name: Run Test
+        run: bun run test
+
+      - name: Build app
+        run: bun run build
