--- a/web/.github/workflows/github-actions-web.yml
+++ b/web/.github/workflows/github-actions-web.yml
@@ -1,5 +1,5 @@
 name: GitHub Actions
-run-name: TODO 🚀
+run-name: Checks for Web
 on:
   push:
     branches:
@@ -17,11 +17,11 @@ jobs:
       - name: Install bun
         uses: oven-sh/setup-bun@v1
 
-      - name: Install dependencies
-        run: bun install
+      - name: CD and Install dependencies
+        run: cd packages/web && bun install
 
       - name: Prettier check
-        run: bun run prettier --check ./src
+        run: bun run prettier --check .
 
       - name: Lint check
         run: bun run eslint ./src
