prettier format and update github action

--- a/web/.github/workflows/github-actions-web.yml
+++ b/web/.github/workflows/github-actions-web.yml
@@ -1,15 +1,22 @@
 name: GitHub Actions
-run-name: Checks for Web
+run-name: web
 on:
   push:
     branches:
       - main
+    paths:
+      - "packages/web/**"
   pull_request:
     branches:
       - main
+    paths:
+      - "packages/web/**"
 jobs:
-  TODO_Name:
+  web:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: packages/web
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -17,14 +24,14 @@ jobs:
       - name: Install bun
         uses: oven-sh/setup-bun@v1
 
-      - name: CD and Install dependencies
-        run: cd packages/web && bun install
+      - name: Install dependencies
+        run: bun install
 
       - name: Prettier check
         run: bun run prettier --check .
 
       - name: Lint check
-        run: bun run eslint ./src
+        run: bun run lint
 
       - name: Run Test
         run: bun run test
