edit-artist-page: link, unlink and delete unlink str member on submit
* split into 4 files
* remove unnecessary tsconfig path
* formatting code

--- a/web/packages/web/tsconfig.json
+++ b/web/packages/web/tsconfig.json
@@ -24,8 +24,7 @@
 		// Path Alias
 		"paths": {
 			"~/*": ["./src/*"],
-			"lib/*": ["./lib/*"],
-			"db/*": ["./dbschema/*"]
+			"lib/*": ["./lib/*"]
 		}
 	}
 }
