--- a/web/packages/web/package.json
+++ b/web/packages/web/package.json
@@ -13,6 +13,7 @@
     "@modular-forms/solid": "^0.22.1",
     "@sinclair/typebox": "^0.32.34",
     "@solid-primitives/destructure": "^0.1.17",
+    "@solid-primitives/i18n": "^2.1.1",
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.13.6",
     "@solidjs/start": "1.0.2",
