--- a/web/packages/web/package.json
+++ b/web/packages/web/package.json
@@ -22,6 +22,7 @@
     "edgedb": "^1.5.7",
     "fp-ts": "^2.16.6",
     "globals": "^15.6.0",
+    "js-cookie": "^3.0.5",
     "ramda": "^0.30.1",
     "solid-floating-ui": "^0.3.1",
     "solid-js": "^1.8.17",
@@ -40,6 +41,7 @@
     "@types/bun": "^1.1.5",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/eslint__js": "^8.42.3",
+    "@types/js-cookie": "^3.0.6",
     "@types/ramda": "^0.30.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
