--- a/web/.github/dependabot.yml
+++ b/web/.github/dependabot.yml
@@ -11,7 +11,7 @@ updates:
       interval: "daily"
     open-pull-requests-limit: 5
     commit-message:
-      prefix: "chore(deps)"
+      prefix: "dependencies"
     rebase-strategy: "auto"
     labels:
       - "dependencies"
