--- a/web/packages/web/package.json
+++ b/web/packages/web/package.json
@@ -8,62 +8,62 @@
     }
   },
   "dependencies": {
-    "@ark-ui/solid": "^3.3.0",
-    "@floating-ui/dom": "^1.6.5",
+    "@ark-ui/solid": "^3.5.0",
+    "@floating-ui/dom": "^1.6.7",
     "@modular-forms/solid": "^0.22.1",
     "@sinclair/typebox": "^0.32.34",
     "@solid-primitives/destructure": "^0.1.17",
     "@solid-primitives/i18n": "^2.1.1",
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.14.1",
-    "@solidjs/start": "1.0.3",
+    "@solidjs/start": "1.0.4",
     "@touhouclouddb/database": "workspace:*",
     "dayjs": "^1.11.11",
     "edgedb": "^1.5.7",
-    "fp-ts": "^2.16.6",
-    "globals": "^15.6.0",
+    "fp-ts": "^2.16.8",
     "js-cookie": "^3.0.5",
     "ramda": "^0.30.1",
     "solid-floating-ui": "^0.3.1",
-    "solid-js": "^1.8.17",
+    "solid-js": "^1.8.18",
     "solid-popper": "^0.3.0",
     "solid-radix-icons": "^1.0.0",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.4.0",
     "ts-pattern": "^5.2.0",
     "valibot": "0.36.0",
-    "vinxi": "^0.3.12"
+    "vinxi": "^0.3.14"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.24.7",
+    "@babel/eslint-parser": "^7.24.8",
     "@solidjs/testing-library": "^0.8.8",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/user-event": "^14.5.2",
-    "@types/bun": "^1.1.5",
+    "@types/bun": "^1.1.6",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/eslint__js": "^8.42.3",
     "@types/js-cookie": "^3.0.6",
-    "@types/ramda": "^0.30.0",
-    "@typescript-eslint/eslint-plugin": "^7.13.1",
-    "@typescript-eslint/parser": "^7.13.1",
+    "@types/ramda": "^0.30.1",
+    "@typescript-eslint/eslint-plugin": "^7.16.0",
+    "@typescript-eslint/parser": "^7.16.0",
     "autoprefixer": "^10.4.19",
-    "babel-preset-solid": "^1.8.17",
+    "babel-preset-solid": "^1.8.18",
     "commitizen": "^4.3.0",
     "cz-customizable": "git+https://github.com/Huliiiiii/cz-customizable.git",
-    "daisyui": "^4.12.2",
-    "eslint": "^9.5.0",
+    "daisyui": "^4.12.10",
+    "eslint": "^9.7.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsx-a11y": "^6.9.0",
     "eslint-plugin-solid": "^0.14.1",
     "jsdom": "^24.1.0",
-    "postcss": "^8.4.38",
-    "prettier": "3.3.2",
+    "postcss": "^8.4.39",
+    "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
+    "solid-devtools": "^0.30.1",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5.5.2",
-    "typescript-eslint": "^7.13.1",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^7.16.0",
     "vite-plugin-cjs-interop": "^2.1.1",
     "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^2.0.1"
+    "vitest": "^2.0.2"
   },
   "engines": {
     "node": ">=18",
