split theme state and user state
- add auth-js
- add tanstack query

--- a/web/packages/web/package.json
+++ b/web/packages/web/package.json
@@ -9,14 +9,19 @@
   },
   "dependencies": {
     "@ark-ui/solid": "^3.5.0",
+    "@auth/core": "^0.34.1",
+    "@edgedb/auth-core": "^0.2.1",
     "@floating-ui/dom": "^1.6.7",
     "@modular-forms/solid": "^0.22.1",
     "@sinclair/typebox": "^0.32.34",
+    "@solid-mediakit/auth": "^2.0.12",
     "@solid-primitives/destructure": "^0.1.17",
     "@solid-primitives/i18n": "^2.1.1",
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.14.1",
     "@solidjs/start": "1.0.4",
+    "@tanstack/solid-query": "^5.51.2",
+    "@tanstack/solid-query-devtools": "^5.51.2",
     "@touhouclouddb/database": "workspace:*",
     "dayjs": "^1.11.11",
     "edgedb": "^1.5.7",
