--- a/web/packages/web/package.json
+++ b/web/packages/web/package.json
@@ -47,8 +47,8 @@
     "@types/eslint__js": "^8.42.3",
     "@types/js-cookie": "^3.0.6",
     "@types/ramda": "^0.30.1",
-    "@typescript-eslint/eslint-plugin": "^7.16.0",
-    "@typescript-eslint/parser": "^7.16.0",
+    "@typescript-eslint/eslint-plugin": "^7.16.1",
+    "@typescript-eslint/parser": "^7.16.1",
     "autoprefixer": "^10.4.19",
     "babel-preset-solid": "^1.8.18",
     "commitizen": "^4.3.0",
@@ -63,12 +63,12 @@
     "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "solid-devtools": "^0.30.1",
-    "tailwindcss": "^3.4.4",
+    "tailwindcss": "^3.4.5",
     "typescript": "^5.5.3",
-    "typescript-eslint": "^7.16.0",
+    "typescript-eslint": "^7.16.1",
     "vite-plugin-cjs-interop": "^2.1.1",
     "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^2.0.2"
+    "vitest": "^2.0.3"
   },
   "engines": {
     "node": ">=18",
@@ -84,7 +84,7 @@
     "format": "prettier --write ./src",
     "lint": "eslint --cache",
     "test-dom": "bun vitest run",
-    "test-bun": "bun test ./test/**/*.test.ts",
+    "test-bun": "bun test ./**/*.buntest.ts",
     "test": "bun run test-bun && bun run test-dom"
   },
   "type": "module",
