--- a/web/packages/web/package.json
+++ b/web/packages/web/package.json
@@ -25,6 +25,7 @@
     "@touhouclouddb/database": "workspace:*",
     "dayjs": "^1.11.11",
     "edgedb": "^1.5.7",
+    "eslint-plugin-oxlint": "^0.5.0",
     "fp-ts": "^2.16.8",
     "js-cookie": "^3.0.5",
     "ramda": "^0.30.1",
@@ -82,7 +83,9 @@
     "start": "vinxi start",
     "version": "vinxi version",
     "format": "prettier --write ./src",
-    "lint": "eslint --cache",
+    "lint::es": "eslint --cache",
+    "lint::oxc": "oxlint --disable-react-plugin",
+    "lint": "bun run lint::oxc && bun run lint::es",
     "test-dom": "bun vitest run",
     "test-bun": "bun test ./**/*.buntest.ts",
     "test": "bun run test-bun && bun run test-dom"
