add auth to database
- update dbschema
- improve package export

--- a/web/packages/database/package.json
+++ b/web/packages/database/package.json
@@ -10,6 +10,10 @@
     "typescript": "latest",
     "edgedb": "latest"
   },
+  "exports": {
+    ".": "./index.ts",
+    "./interfaces": "./interfaces.ts"
+  },
   "scripts": {
     "generate": "npx @edgedb/generate interfaces --file interfaces.ts && npx @edgedb/generate edgeql-js --target esm --output-dir ./edgeql-js"
   },
