--- a/web/packages/web/package.json
+++ b/web/packages/web/package.json
@@ -24,6 +24,7 @@
     "@tanstack/solid-query-devtools": "^5.51.2",
     "@touhouclouddb/database": "workspace:*",
     "dayjs": "^1.11.11",
+    "edge-auth-solid-start": "git+https://github.com/Huliiiiii/edgedb-auth-solid-start.git",
     "edgedb": "^1.5.7",
     "eslint-plugin-oxlint": "^0.5.0",
     "fp-ts": "^2.16.8",
@@ -53,7 +54,6 @@
     "autoprefixer": "^10.4.19",
     "babel-preset-solid": "^1.8.18",
     "commitizen": "^4.3.0",
-    "cz-customizable": "git+https://github.com/Huliiiiii/cz-customizable.git",
     "daisyui": "^4.12.10",
     "eslint": "^9.7.0",
     "eslint-config-prettier": "^9.1.0",
@@ -86,9 +86,9 @@
     "lint::es": "eslint --cache",
     "lint::oxc": "oxlint --disable-react-plugin",
     "lint": "bun run lint::oxc && bun run lint::es",
-    "test-dom": "bun vitest run",
-    "test-bun": "bun test ./**/*.buntest.ts",
-    "test": "bun run test-bun && bun run test-dom"
+    "test::dom": "bun vitest run",
+    "test::bun": "bun test ./**/*.buntest.ts",
+    "test": "bun run test::dom && bun run test::bun"
   },
   "type": "module",
   "module": "index.ts"
