--- a/web/packages/web/tsconfig.json
+++ b/web/packages/web/tsconfig.json
@@ -21,6 +21,7 @@
 		"noUnusedParameters": true,
 		"noPropertyAccessFromIndexSignature": true,
 		"noFallthroughCasesInSwitch": true,
+		"exactOptionalPropertyTypes": true,
 		// Path Alias
 		"paths": {
 			"~/*": ["./src/*"],
