improve database library export
- update edgedb version

--- a/web/packages/database/package.json
+++ b/web/packages/database/package.json
@@ -12,7 +12,8 @@
   },
   "exports": {
     ".": "./index.ts",
-    "./interfaces": "./interfaces.ts"
+    "./interfaces": "./interfaces.ts",
+    "./*": "./edgeql-js/*"
   },
   "scripts": {
     "generate": "npx @edgedb/generate interfaces --file interfaces.ts && npx @edgedb/generate edgeql-js --target esm --output-dir ./edgeql-js",
