--- a/web/packages/web/package.json
+++ b/web/packages/web/package.json
@@ -14,22 +14,23 @@
     "@floating-ui/dom": "^1.6.8",
     "@modular-forms/solid": "^0.22.1",
     "@sinclair/typebox": "^0.32.35",
-    "@solid-mediakit/auth": "^2.1.0",
+    "@solid-mediakit/auth": "^2.1.2",
     "@solid-primitives/destructure": "^0.1.17",
     "@solid-primitives/i18n": "^2.1.1",
+    "@solid-primitives/memo": "^1.3.9",
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.14.1",
     "@solidjs/start": "1.0.6",
-    "@tanstack/solid-query": "^5.51.15",
-    "@tanstack/solid-query-devtools": "^5.51.15",
+    "@tanstack/solid-query": "^5.51.21",
+    "@tanstack/solid-query-devtools": "^5.51.21",
     "@touhouclouddb/database": "workspace:*",
     "arktype": "2.0.0-beta.3",
     "dayjs": "^1.11.12",
-    "edgedb": "^1.5.8",
+    "edgedb": "^1.5.9",
     "edgedb-auth-solid-start": "git+https://github.com/Huliiiiii/edgedb-auth-solid-start.git",
-    "eslint-plugin-oxlint": "^0.5.0",
     "fp-ts": "^2.16.9",
     "js-cookie": "^3.0.5",
+    "radash": "^12.1.0",
     "ramda": "^0.30.1",
     "solid-floating-ui": "^0.3.1",
     "solid-js": "^1.8.19",
@@ -37,7 +38,7 @@
     "solid-radix-icons": "^1.0.0",
     "tailwind-merge": "^2.4.0",
     "ts-pattern": "^5.2.0",
-    "valibot": "0.36.0",
+    "valibot": "0.37.0",
     "vinxi": "^0.4.1"
   },
   "devDependencies": {
@@ -51,27 +52,30 @@
     "@types/eslint__js": "^8.42.3",
     "@types/js-cookie": "^3.0.6",
     "@types/ramda": "^0.30.1",
-    "@typescript-eslint/eslint-plugin": "^7.17.0",
-    "@typescript-eslint/parser": "^7.17.0",
-    "autoprefixer": "^10.4.19",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
+    "autoprefixer": "^10.4.20",
     "babel-preset-solid": "^1.8.19",
     "commitizen": "^4.3.0",
     "daisyui": "^4.12.10",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsx-a11y": "^6.9.0",
+    "eslint-plugin-oxlint": "^0.5.0",
+    "eslint-plugin-perfectionist": "^3.1.2",
     "eslint-plugin-solid": "^0.14.1",
     "jsdom": "^24.1.1",
+    "lightningcss": "^1.25.1",
     "postcss": "^8.4.40",
     "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "solid-devtools": "^0.30.1",
     "tailwindcss": "^3.4.7",
-    "typescript": "^5.6.0-dev.20240728",
-    "typescript-eslint": "^7.17.0",
+    "typescript": "^5.6.0-dev.20240811",
+    "typescript-eslint": "^8.0.0",
     "vite-plugin-cjs-interop": "^2.1.1",
     "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^2.0.4"
+    "vitest": "^2.0.5"
   },
   "engines": {
     "node": ">=18",
@@ -85,8 +89,9 @@
     "version": "vinxi version",
     "format": "prettier --write ./src",
     "lint::es": "eslint --cache",
-    "lint::oxc": "oxlint --disable-react-plugin",
+    "lint::oxc": "bunx oxlint@latest -c .oxlintrc.json --import-plugin --disable-react-plugin --jsx-a11y-plugin --promise-plugin",
     "lint": "bun run lint::oxc && bun run lint::es",
+    "fix": "bun run lint::oxc --fix && bun run lint::es --fix",
     "test::dom": "bun vitest run",
     "test::bun": "bun test ./**/*.buntest.ts",
     "test": "bun run test::dom && bun run test::bun"
