--- a/web/packages/web/package.json
+++ b/web/packages/web/package.json
@@ -20,7 +20,7 @@
     "@solid-primitives/memo": "^1.3.9",
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.14.1",
-    "@solidjs/start": "1.0.6",
+    "@solidjs/start": "^1.0.6",
     "@tanstack/solid-query": "^5.51.21",
     "@tanstack/solid-query-devtools": "^5.51.21",
     "@touhouclouddb/database": "workspace:*",
@@ -33,7 +33,7 @@
     "radash": "^12.1.0",
     "ramda": "^0.30.1",
     "solid-floating-ui": "^0.3.1",
-    "solid-js": "^1.8.19",
+    "solid-js": "^1.8.21",
     "solid-popper": "^0.3.0",
     "solid-radix-icons": "^1.0.0",
     "tailwind-merge": "^2.4.0",
@@ -71,7 +71,7 @@
     "prettier-plugin-tailwindcss": "^0.6.5",
     "solid-devtools": "^0.30.1",
     "tailwindcss": "^3.4.7",
-    "typescript": "^5.6.0-dev.20240811",
+    "typescript": "5.6.1-rc",
     "typescript-eslint": "^8.0.0",
     "vite-plugin-cjs-interop": "^2.1.1",
     "vite-tsconfig-paths": "^4.3.2",
