--- a/web/packages/web/package.json
+++ b/web/packages/web/package.json
@@ -8,73 +8,77 @@
     }
   },
   "dependencies": {
-    "@ark-ui/solid": "^3.6.2",
+    "@ark-ui/solid": "^3.10.0",
+    "@ark/attest": "^0.16.0",
     "@auth/core": "^0.34.2",
     "@edgedb/auth-core": "^0.2.1",
-    "@floating-ui/dom": "^1.6.8",
+    "@floating-ui/dom": "^1.6.10",
+    "@kobalte/core": "^0.13.6",
     "@modular-forms/solid": "^0.22.1",
-    "@sinclair/typebox": "^0.32.35",
     "@solid-mediakit/auth": "^2.1.2",
     "@solid-primitives/destructure": "^0.1.17",
     "@solid-primitives/i18n": "^2.1.1",
     "@solid-primitives/memo": "^1.3.9",
     "@solidjs/meta": "^0.29.4",
-    "@solidjs/router": "^0.14.1",
+    "@solidjs/router": "^0.14.3",
     "@solidjs/start": "^1.0.6",
-    "@tanstack/solid-query": "^5.51.21",
-    "@tanstack/solid-query-devtools": "^5.51.21",
+    "@tanstack/solid-query": "^5.53.3",
+    "@tanstack/solid-query-devtools": "^5.54.0",
     "@touhouclouddb/database": "workspace:*",
-    "arktype": "2.0.0-beta.3",
-    "dayjs": "^1.11.12",
-    "edgedb": "^1.5.9",
+    "arktype": "2.0.0-rc.5",
+    "dayjs": "^1.11.13",
+    "edgedb": "^1.5.11",
     "edgedb-auth-solid-start": "git+https://github.com/Huliiiiii/edgedb-auth-solid-start.git",
     "fp-ts": "^2.16.9",
     "js-cookie": "^3.0.5",
     "radash": "^12.1.0",
     "ramda": "^0.30.1",
     "solid-floating-ui": "^0.3.1",
-    "solid-js": "^1.8.21",
+    "solid-js": "^1.8.22",
     "solid-popper": "^0.3.0",
     "solid-radix-icons": "^1.0.0",
-    "tailwind-merge": "^2.4.0",
-    "ts-pattern": "^5.2.0",
-    "valibot": "0.40.0",
-    "vinxi": "^0.4.1"
+    "string-similarity-js": "^2.1.4",
+    "tailwind-merge": "^2.5.2",
+    "ts-pattern": "^5.3.1",
+    "valibot": "0.38.0",
+    "vinxi": "^0.4.2"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.25.1",
     "@solidjs/testing-library": "^0.8.9",
-    "@tanstack/eslint-plugin-query": "^5.51.15",
-    "@testing-library/jest-dom": "^6.4.8",
+    "@tanstack/eslint-plugin-query": "^5.53.0",
+    "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/user-event": "^14.5.2",
-    "@types/bun": "^1.1.6",
+    "@types/bun": "^1.1.8",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/eslint__js": "^8.42.3",
     "@types/js-cookie": "^3.0.6",
-    "@types/ramda": "^0.30.1",
-    "@typescript-eslint/eslint-plugin": "^8.0.0",
-    "@typescript-eslint/parser": "^8.0.0",
+    "@types/ramda": "^0.30.2",
+    "@typescript-eslint/eslint-plugin": "^8.4.0",
+    "@typescript-eslint/parser": "^8.4.0",
+    "@vitest/browser": "^2.0.5",
     "autoprefixer": "^10.4.20",
-    "babel-preset-solid": "^1.8.19",
+    "babel-preset-solid": "^1.8.22",
     "commitizen": "^4.3.0",
     "daisyui": "^4.12.10",
-    "eslint": "^9.8.0",
+    "eslint": "^9.9.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsx-a11y": "^6.9.0",
-    "eslint-plugin-oxlint": "^0.5.0",
-    "eslint-plugin-perfectionist": "^3.1.2",
-    "eslint-plugin-solid": "^0.14.1",
-    "jsdom": "^24.1.1",
-    "lightningcss": "^1.25.1",
-    "postcss": "^8.4.40",
+    "eslint-plugin-oxlint": "^0.9.2",
+    "eslint-plugin-perfectionist": "^3.3.0",
+    "eslint-plugin-solid": "^0.14.3",
+    "jsdom": "^25.0.0",
+    "lightningcss": "^1.26.0",
+    "playwright": "^1.46.1",
+    "postcss": "^8.4.44",
     "prettier": "3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.5",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "solid-devtools": "^0.30.1",
-    "tailwindcss": "^3.4.7",
-    "typescript": "5.6.1-rc",
-    "typescript-eslint": "^8.0.0",
-    "vite-plugin-cjs-interop": "^2.1.1",
-    "vite-tsconfig-paths": "^4.3.2",
+    "tailwindcss": "^3.4.10",
+    "typescript": "5.5.4",
+    "typescript-eslint": "^8.4.0",
+    "vite-plugin-cjs-interop": "^2.1.2",
+    "vite-tsconfig-paths": "^5.0.1",
     "vitest": "^2.0.5"
   },
   "engines": {
@@ -92,7 +96,7 @@
     "lint::oxc": "bunx oxlint@latest -c .oxlintrc.json --import-plugin --disable-react-plugin --jsx-a11y-plugin --promise-plugin",
     "lint": "bun run lint::oxc && bun run lint::es",
     "fix": "bun run lint::oxc --fix && bun run lint::es --fix",
-    "test::dom": "bun vitest run",
+    "test::vite": "bun vitest run",
     "test::bun": "bun test ./**/*.buntest.ts",
     "test": "bun run test::dom && bun run test::bun"
   },
