--- a/web/packages/web/package.json
+++ b/web/packages/web/package.json
@@ -8,11 +8,11 @@
     }
   },
   "dependencies": {
-    "@ark-ui/solid": "^3.11.0",
-    "@ark/attest": "^0.17.0",
-    "@auth/core": "^0.34.2",
+    "@ark-ui/solid": "^3.12.0",
+    "@ark/attest": "^0.18.1",
+    "@auth/core": "^0.35.0",
     "@edgedb/auth-core": "^0.2.1",
-    "@floating-ui/dom": "^1.6.10",
+    "@floating-ui/dom": "^1.6.11",
     "@kobalte/core": "^0.13.6",
     "@modular-forms/solid": "^0.23.0",
     "@solid-mediakit/auth": "^2.1.2",
@@ -20,12 +20,13 @@
     "@solid-primitives/i18n": "^2.1.1",
     "@solid-primitives/memo": "^1.3.9",
     "@solidjs/meta": "^0.29.4",
-    "@solidjs/router": "^0.14.3",
+    "@solidjs/router": "^0.14.5",
     "@solidjs/start": "^1.0.6",
     "@tanstack/solid-query": "^5.56.2",
     "@tanstack/solid-query-devtools": "^5.56.2",
     "@touhouclouddb/database": "workspace:*",
-    "arktype": "2.0.0-rc.6",
+    "arktype": "2.0.0-rc.8",
+    "daisyui": "^4.12.10",
     "dayjs": "^1.11.13",
     "edgedb": "^1.5.12",
     "edgedb-auth-solid-start": "git+https://github.com/Huliiiiii/edgedb-auth-solid-start.git",
@@ -42,12 +43,12 @@
     "tailwind-merge": "^2.5.2",
     "ts-pattern": "^5.3.1",
     "valibot": "0.38.0",
-    "daisyui": "^4.12.10",
-    "vinxi": "^0.4.2"
+    "vinxi": "^0.4.3"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.25.1",
     "@solidjs/testing-library": "^0.8.9",
+    "@tailwindcss/forms": "^0.5.9",
     "@tanstack/eslint-plugin-query": "^5.56.1",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/user-event": "^14.5.2",
@@ -58,27 +59,27 @@
     "@types/ramda": "^0.30.2",
     "@typescript-eslint/eslint-plugin": "^8.5.0",
     "@typescript-eslint/parser": "^8.5.0",
-    "@vitest/browser": "^2.1.0",
+    "@vitest/browser": "^2.1.1",
     "autoprefixer": "^10.4.20",
     "babel-preset-solid": "^1.8.22",
     "eslint": "^9.10.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsx-a11y": "^6.10.0",
     "eslint-plugin-oxlint": "^0.9.5",
-    "eslint-plugin-perfectionist": "^3.5.0",
+    "eslint-plugin-perfectionist": "^3.6.0",
     "eslint-plugin-solid": "^0.14.3",
     "jsdom": "^25.0.0",
     "lightningcss": "^1.27.0",
-    "playwright": "^1.47.0",
-    "postcss": "^8.4.45",
+    "playwright": "^1.47.1",
+    "postcss": "^8.4.47",
     "prettier-plugin-tailwindcss": "^0.6.6",
     "solid-devtools": "^0.30.1",
     "tailwindcss": "^3.4.11",
     "typescript": "5.6.2",
     "typescript-eslint": "^8.5.0",
-    "vite-plugin-cjs-interop": "^2.1.3",
+    "vite-plugin-cjs-interop": "^2.1.4",
     "vite-tsconfig-paths": "^5.0.1",
-    "vitest": "^2.1.0"
+    "vitest": "^2.1.1"
   },
   "engines": {
     "node": ">=18",
