--- a/web/packages/web/package.json
+++ b/web/packages/web/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.25.1",
+    "@faker-js/faker": "^9.0.3",
     "@solidjs/testing-library": "^0.8.10",
     "@tailwindcss/forms": "^0.5.9",
     "@tanstack/eslint-plugin-query": "^5.58.1",
