--- a/server/.rustfmt.toml
+++ b/server/.rustfmt.toml
@@ -1,6 +1,7 @@
 # force_multiline_blocks = true
-indent_style = "Visual"
+# indent_style = "Visual"
 max_width = 80
-normalize_comments = true
+# normalize_comments = true
 tab_spaces = 4
-wrap_comments = true
+# wrap_comments = true
+newline_style = "Unix"
