--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,33 +1,71 @@
-
 [workspace]
 members = [
-	".",
-	"migration",
+    ".",
+    "entity",
 ]
 
 [workspace.dependencies]
-axum = "0.7"
-sea-orm = { version = "1.1", features = [
-	"sqlx-postgres",
-	"runtime-tokio-rustls",
-	"macros",
-] }
+entity = { path = "./entity" }
+# external
+anyhow = "1.0.92"
+argon2 = "0.5.3"
+axum = { version = "0.7.7", features = [ "macros", "multipart" ] }
+axum-login = { version = "0.16.0" }
+chrono = "0.4.38"
 dotenvy = "0.15"
-juniper = "0.16"
-tokio = { version = "1", features = [
-	"full",
+itertools = "0.13.0"
+juniper = { version = "0.16", features = [ "chrono" ] }
+juniper_axum = "0.1.1"
+sea-orm = { version = "1.1", features = [
+    "sqlx-postgres",
+    "runtime-tokio-rustls",
+    "macros",
+    "debug-print",
 ] }
+serde = { version = "1", features = [ "derive" ] }
+tokio = { version = "1", features = [
+    "full",
+] }
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = [ "chrono" ] }
 
 [package]
-name = "thcdb_rs"
-version = "0.1.0"
 edition = "2021"
+name    = "thcdb_rs"
+version = "0.1.0"
 
 [dependencies]
-# entity = { path = "entity" }
-migration = { path = "migration" }
+anyhow.workspace             = true
+argon2.workspace             = true
+async-trait                  = { version = "0.1.83" }
+axum.workspace               = true
+axum-login.workspace         = true
+base64                       = "0.22.1"
+chrono.workspace             = true
+dotenvy.workspace            = true
+entity.workspace             = true
+error_set                    = { version = "0.7.0", features = [ "tracing" ] }
+image                        = "0.25.5"
+itertools.workspace          = true
+juniper.workspace            = true
+juniper_axum.workspace       = true
+once_cell                    = "1.20.2"
+regex                        = "1.11.1"
+sea-orm.workspace            = true
+serde.workspace              = true
+serde_json                   = "1.0.132"
+tokio.workspace              = true
+tracing.workspace            = true
+tracing-subscriber.workspace = true
+xxhash-rust                  = { version = "0.8.12", features = [ "std", "xxh3" ] }
 
-axum.workspace = true
-sea-orm.workspace = true
-dotenvy.workspace = true
-tokio.workspace = true
+[dev-dependencies]
+rusty-hook = "0.11.2"
+
+[profile.release]
+codegen-units   = 1
+debug           = false
+lto             = "thin"
+opt-level       = 3
+overflow-checks = true
+panic           = "abort"
