--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -45,6 +45,7 @@ chrono.workspace             = true
 dotenvy.workspace            = true
 entity.workspace             = true
 error_set                    = { version = "0.7.0", features = [ "tracing" ] }
+fred                         = { version = "9.4.0" }
 image                        = "0.25.5"
 itertools.workspace          = true
 juniper.workspace            = true
@@ -55,6 +56,7 @@ sea-orm.workspace            = true
 serde.workspace              = true
 serde_json                   = "1.0.132"
 tokio.workspace              = true
+tower-sessions-redis-store   = "0.14.0"
 tracing.workspace            = true
 tracing-subscriber.workspace = true
 xxhash-rust                  = { version = "0.8.12", features = [ "std", "xxh3" ] }
