--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -2,20 +2,21 @@
 members = [
     ".",
     "entity",
+    "migration",
 ]
 
 [workspace.dependencies]
 entity = { path = "./entity" }
 # external
-anyhow = "1.0.92"
-argon2 = "0.5.3"
+anyhow = "1.0"
+argon2 = "0.5"
 axum = { version = "0.7", features = [ "macros", "multipart" ] }
-axum-login = { version = "0.16.0" }
-chrono = "0.4.38"
+axum-login = { version = "0.16" }
+chrono = "0.4"
 dotenvy = "0.15"
-itertools = "0.13.0"
+itertools = "0.13"
 juniper = { version = "0.16", features = [ "chrono" ] }
-juniper_axum = "0.1.1"
+juniper_axum = "0.1"
 sea-orm = { version = "1.1", features = [
     "sqlx-postgres",
     "runtime-tokio-rustls",
@@ -26,8 +27,8 @@ serde = { version = "1", features = [ "derive" ] }
 tokio = { version = "1", features = [
     "full",
 ] }
-tracing = "0.1.40"
-tracing-subscriber = { version = "0.3.18", features = [ "chrono" ] }
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = [ "chrono" ] }
 
 [package]
 edition = "2021"
@@ -37,25 +38,25 @@ version = "0.1.0"
 [dependencies]
 anyhow.workspace             = true
 argon2.workspace             = true
-async-trait                  = { version = "0.1.83" }
+async-trait                  = { version = "0.1" }
 axum.workspace               = true
 axum-login.workspace         = true
 axum_typed_multipart         = "0.13"
-base64                       = "0.22.1"
+base64                       = "0.22"
 chrono.workspace             = true
 dotenvy.workspace            = true
 entity.workspace             = true
-error_set                    = { version = "0.7.0", features = [ "tracing" ] }
-fred                         = { version = "9.4.0" }
-image                        = "0.25.5"
+error_set                    = { version = "0.7", features = [ "tracing" ] }
+fred                         = { version = "9.4" }
+image                        = "0.25"
 itertools.workspace          = true
 juniper.workspace            = true
 juniper_axum.workspace       = true
-once_cell                    = "1.20.2"
-regex                        = "1.11.1"
+once_cell                    = "1.20"
+regex                        = "1.11"
 sea-orm.workspace            = true
 serde.workspace              = true
-serde_json                   = "1.0.132"
+serde_json                   = "1.0"
 tokio.workspace              = true
 tower-sessions-redis-store   = "0.14.0"
 tracing.workspace            = true
@@ -65,7 +66,7 @@ utoipa-axum                  = "0.1"
 utoipa-rapidoc               = { version = "5", features = [ "axum" ] }
 utoipa-redoc                 = { version = "4", features = [ "axum" ] }
 utoipa-swagger-ui            = { version = "8", features = [ "axum" ] }
-xxhash-rust                  = { version = "0.8.12", features = [ "std", "xxh3" ] }
+xxhash-rust                  = { version = "0.8", features = [ "std", "xxh3" ] }
 zxcvbn                       = "3.1"
 
 [dev-dependencies]
