--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -63,7 +63,7 @@ tokio.workspace              = true
 tower-sessions-redis-store   = "0.14.0"
 tracing.workspace            = true
 tracing-subscriber.workspace = true
-utoipa                       = { version = "5", features = [ "axum_extras", "chrono", "macros" ] }
+utoipa                       = { version = "5", features = [ "axum_extras", "chrono", "macros", "preserve_order" ] }
 utoipa-axum                  = "0.1"
 utoipa-rapidoc               = { version = "5", features = [ "axum" ] }
 utoipa-redoc                 = { version = "4", features = [ "axum" ] }
