--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -36,40 +36,45 @@ name    = "thcdb_rs"
 version = "0.1.0"
 
 [dependencies]
-anyhow.workspace             = true
-argon2.workspace             = true
-async-trait                  = { version = "0.1" }
-axum.workspace               = true
-axum-login.workspace         = true
-axum_typed_multipart         = "0.13"
-base64                       = "0.22"
-bon                          = "3.0"
-chrono.workspace             = true
-dotenvy.workspace            = true
-entity.workspace             = true
-error_set                    = { version = "0.7", features = [ "tracing" ] }
-fred                         = { version = "9.4" }
-image                        = "0.25"
-iso8601-duration             = { version = "0.2", features = [ "chrono" ] }
-itertools.workspace          = true
-juniper.workspace            = true
-juniper_axum.workspace       = true
-once_cell                    = "1.20"
-regex                        = "1.11"
-sea-orm.workspace            = true
-serde.workspace              = true
-serde_json                   = "1.0"
-tokio.workspace              = true
-tower-sessions-redis-store   = "0.14.0"
-tracing.workspace            = true
+anyhow.workspace = true
+argon2.workspace = true
+async-trait = { version = "0.1" }
+axum.workspace = true
+axum-login.workspace = true
+axum_typed_multipart = "0.13"
+base64 = "0.22"
+bon = "3.0"
+chrono.workspace = true
+dotenvy.workspace = true
+entity.workspace = true
+error_set = { version = "0.7", features = [ "tracing" ] }
+fred = { version = "9.4" }
+image = "0.25"
+iso8601-duration = { version = "0.2", features = [ "chrono" ] }
+itertools.workspace = true
+juniper.workspace = true
+juniper_axum.workspace = true
+once_cell = "1.20"
+regex = "1.11"
+sea-orm.workspace = true
+serde.workspace = true
+serde_json = "1.0"
+tokio.workspace = true
+tower-sessions-redis-store = "0.14.0"
+tracing.workspace = true
 tracing-subscriber.workspace = true
-utoipa                       = { version = "5", features = [ "axum_extras", "chrono", "macros", "preserve_order" ] }
-utoipa-axum                  = "0.1"
-utoipa-rapidoc               = { version = "5", features = [ "axum" ] }
-utoipa-redoc                 = { version = "4", features = [ "axum" ] }
-utoipa-swagger-ui            = { version = "8", features = [ "axum" ] }
-xxhash-rust                  = { version = "0.8", features = [ "std", "xxh3" ] }
-zxcvbn                       = "3.1"
+utoipa = { version = "5", features = [
+    "axum_extras",
+    "chrono",
+    "macros",
+    "preserve_order",
+] }
+utoipa-axum = "0.1"
+utoipa-rapidoc = { version = "5", features = [ "axum" ] }
+utoipa-redoc = { version = "4", features = [ "axum" ] }
+utoipa-swagger-ui = { version = "8", features = [ "axum" ] }
+xxhash-rust = { version = "0.8", features = [ "std", "xxh3" ] }
+zxcvbn = "3.1"
 
 [dev-dependencies]
 rusty-hook = "0.11.2"
