--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -49,6 +49,7 @@ dotenvy.workspace = true
 entity.workspace = true
 error_set = { version = "0.7", features = [ "tracing" ] }
 fred = { version = "9.4" }
+futures = "0.3.31"
 image = "0.25"
 iso8601-duration = { version = "0.2", features = [ "chrono" ] }
 itertools.workspace = true
@@ -78,6 +79,12 @@ zxcvbn = "3.1"
 
 [dev-dependencies]
 rusty-hook = "0.11.2"
+
+[profile.dev]
+opt-level = 1
+
+[profile.dev.package."*"]
+opt-level = 3
 
 [profile.release]
 codegen-units   = 1
