--- a/server/.github/workflows/rust.yml
+++ b/server/.github/workflows/rust.yml
@@ -7,16 +7,29 @@ on:
     branches: [ "main" ]
 
 env:
+  CARGO_INCREMENTAL: 0
+  CARGO_PROFILE_DEV_DEBUG: 0
   CARGO_TERM_COLOR: always
+  RUSTC_WRAPPER: "sccache"
+  SCCACHE_GHA_ENABLED: "true"
+  RUST_FLAGS: "-D warnings"
 
 jobs:
-  build:
-
+  rust:
+    name: rust
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
-    - name: Build
-      run: cargo build --verbose
-    - name: Run tests
+    - uses: mozilla-actions/sccache-action@v0.0.6
+
+    - name: fmt
+      run: cargo fmt --verbose
+
+    - name: clippy
+      run: cargo clippy --verbose
+
+    - name: test
       run: cargo test --verbose
+
+    - name: build
+      run: cargo build --verbose
