Try to improve build performance
- use faster linker
- split debuginfo
- use cranelift backend

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -71,8 +71,6 @@ utoipa = { version = "5", features = [
     "preserve_order",
 ] }
 utoipa-axum = "0.1"
-utoipa-rapidoc = { version = "5", features = [ "axum" ] }
-utoipa-redoc = { version = "4", features = [ "axum" ] }
 utoipa-swagger-ui = { version = "8", features = [ "axum" ] }
 xxhash-rust = { version = "0.8", features = [ "std", "xxh3" ] }
 zxcvbn = "3.1"
@@ -82,6 +80,8 @@ rusty-hook = "0.11.2"
 
 [profile.dev]
 opt-level = 1
+split-debuginfo = "unpacked"
+codegen-backend = "cranelift"
 
 [profile.dev.package."*"]
 opt-level = 3
