--- a/server/.github/workflows/rust.yml
+++ b/server/.github/workflows/rust.yml
@@ -12,24 +12,24 @@ env:
   CARGO_TERM_COLOR: always
   RUSTC_WRAPPER: "sccache"
   SCCACHE_GHA_ENABLED: "true"
-  RUST_FLAGS: "-D warnings"
+  RUSTFLAGS: "-D warnings"
 
 jobs:
   rust:
-    name: rust
+    name: Rust
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
     - uses: mozilla-actions/sccache-action@v0.0.6
 
-    - name: fmt
-      run: cargo fmt --verbose
+    - name: Format
+      run: cargo fmt --check --verbose
 
-    - name: clippy
+    - name: Clippy
       run: cargo clippy --verbose
 
-    - name: test
+    - name: Test
       run: cargo test --verbose
 
-    - name: build
+    - name: Build
       run: cargo build --verbose
