--- a/server/.rustfmt.toml
+++ b/server/.rustfmt.toml
@@ -1,7 +1,8 @@
-# force_multiline_blocks = true
-# indent_style = "Visual"
-max_width = 80
-# normalize_comments = true
-tab_spaces = 4
-# wrap_comments = true
-newline_style = "Unix"
+format_code_in_doc_comments = true
+format_macro_matchers       = true
+group_imports               = "StdExternalCrate"
+imports_granularity         = "Module"
+max_width                   = 80
+newline_style               = "Unix"
+normalize_comments          = true
+tab_spaces                  = 4
