--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -63,6 +63,7 @@ regex = "1.11"
 sea-orm.workspace = true
 serde.workspace = true
 serde_json = "1.0"
+tikv-jemallocator = "0.6.0"
 tokio.workspace = true
 tower-sessions-redis-store = "0.14.0"
 tracing.workspace = true
