--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -36,7 +36,7 @@ name    = "thcdb_rs"
 version = "0.1.0"
 
 [patch.crates-io]
-sea-orm = { git = "https://github.com/Huliiiiii/sea-orm.git", branch = "main"}
+sea-orm = { git = "https://github.com/Huliiiiii/sea-orm.git", branch = "master" }
 
 [dependencies]
 anyhow.workspace = true
