--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -83,7 +83,7 @@ zxcvbn = "3.1"
 rusty-hook = "0.11.2"
 
 [profile.dev]
-codegen-backend = "cranelift"
+# codegen-backend = "cranelift"
 opt-level       = 1
 split-debuginfo = "unpacked"
 
