--- a/server/entity/Cargo.toml
+++ b/server/entity/Cargo.toml
@@ -13,3 +13,4 @@ axum-login.workspace = true
 juniper.workspace    = true
 sea-orm.workspace    = true
 serde.workspace      = true
+utoipa.workspace     = true
