--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -82,6 +82,7 @@ regex = "1.11"
 sea-orm.workspace = true
 serde.workspace = true
 serde_json = "1.0"
+serde_repr = "0.1"
 serde_with = { version = "3.12.0", features = [ "chrono_0_4" ] }
 tikv-jemallocator = "0.6.0"
 tokio.workspace = true
