--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -4,11 +4,13 @@ members = [
     "entity",
     "macros",
     "migration",
+    "proc_macros",
 ]
 
 [workspace.dependencies]
-entity = { path = "./entity" }
-macros = { path = "./macros" }
+entity      = { path = "./entity" }
+macros      = { path = "./macros" }
+proc_macros = { path = "./proc_macros" }
 # external
 argon2 = "0.5"
 axum = { version = "0.8", features = [
@@ -47,7 +49,7 @@ utoipa = { version = "5", features = [
 ] }
 
 [package]
-edition = "2021"
+edition = "2024"
 name    = "thcdb_rs"
 version = "0.1.0"
 
