--- a/server/macros/Cargo.toml
+++ b/server/macros/Cargo.toml
@@ -1,12 +1,7 @@
 [package]
-name = "macros"
-version = "0.1.0"
 edition = "2024"
-
-[lib]
-proc-macro = true
+name    = "macros"
+version = "0.1.0"
 
 [dependencies]
-proc-macro2 = "1.0.93"
-quote = "1.0.38"
-syn = "2.0.98"
+proc_macros.workspace = true
