--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -76,6 +76,7 @@ error_set = { version = "0.8", features = [
 ] }
 fred = { version = "10.0" }
 futures = "0.3.31"
+governor = "0.8.0"
 image = "0.25"
 iso8601-duration = { version = "0.2", features = [
     "chrono",
@@ -92,7 +93,11 @@ serde_repr = "0.1"
 serde_with = { version = "3.12.0", features = [ "chrono_0_4" ] }
 tikv-jemallocator = "0.6.0"
 tokio.workspace = true
+tower = { version = "0.5.2", features = [
+    "limit",
+] }
 tower-sessions-redis-store = "0.16.0"
+tower_governor = "0.6.0"
 tracing.workspace = true
 tracing-subscriber.workspace = true
 utoipa.workspace = true
