Comment out mold in clang args

--- a/server/.cargo/config.toml
+++ b/server/.cargo/config.toml
@@ -20,7 +20,7 @@ rustflags = [
     # - Ubuntu: `sudo apt-get install mold clang`
     # - Fedora: `sudo dnf install mold clang`
     # - Arch: `sudo pacman -S mold clang`
-    "-Clink-arg=-fuse-ld=mold",
+    # "-Clink-arg=-fuse-ld=mold",
 
     # Nightly
     "-Zshare-generics=y",
