--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -124,7 +124,12 @@ opt-level       = 1
 split-debuginfo = "unpacked"
 
 [profile.dev.package."*"]
-opt-level = 3
+codegen-backend = "cranelift"
+opt-level       = 3
+
+[profile.dev.package."async-trait"]
+codegen-backend = "llvm"
+opt-level       = 3
 
 [profile.release]
 codegen-units   = 1
