--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -91,6 +91,8 @@ serde.workspace = true
 serde_json = "1.0"
 serde_repr = "0.1"
 serde_with = { version = "3.12.0", features = [ "chrono_0_4" ] }
+strum = "0.27.0"
+strum_macros = "0.27.0"
 tikv-jemallocator = "0.6.0"
 tokio.workspace = true
 tower = { version = "0.5.2", features = [
