--- a/server/rust-toolchain.toml
+++ b/server/rust-toolchain.toml
@@ -1,4 +1,4 @@
 [toolchain]
 channel    = "nightly"
-components = [ "rustfmt", "clippy" ]
+components = [ "rustfmt", "clippy", "rustc-codegen-cranelift-preview" ]
 targets    = [ "x86_64-unknown-linux-gnu" ]
