--- a/server/proc_macros/Cargo.toml
+++ b/server/proc_macros/Cargo.toml
@@ -10,4 +10,4 @@ proc-macro = true
 itertools.workspace = true
 proc-macro2         = "1.0.93"
 quote               = "1.0.38"
-syn                 = "2.0.98"
+syn                 = { version = "2.0.98", features = [ "full" ] }
