--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -78,7 +78,7 @@ error_set = { version = "0.8", features = [
     "tracing",
 ] }
 fred = { version = "10.0" }
-futures = "0.3.31"
+futures-util = "0.3"
 governor = "0.8.0"
 image = "0.25"
 iso8601-duration = { version = "0.2", features = [
