--- a/server/proc_macros/Cargo.toml
+++ b/server/proc_macros/Cargo.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 proc-macro = true
 
 [dependencies]
+darling             = "0.20.0"
 itertools.workspace = true
 proc-macro2         = "1.0.93"
 quote               = "1.0.38"
