--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -67,6 +67,7 @@ bon = { version = "3.0", features = [
     "implied-bounds",
 ] }
 chrono.workspace = true
+config = { version = "0.15.8", features = [ "ron" ], default-features = false }
 derive_more = { version = "2.0.1", features = [
     "display",
 ] }
