--- a/web/packages/web/package.json
+++ b/web/packages/web/package.json
@@ -22,21 +22,20 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@ark-ui/solid": "^4.10.2",
-    "@ark/attest": "^0.19.0",
-    "@auth/core": "^0.35.3",
+    "@ark/attest": "^0.43.2",
+    "@auth/core": "^0.38.0",
     "@floating-ui/dom": "^1.6.13",
     "@kobalte/core": "^0.13.9",
-    "@modular-forms/solid": "^0.23.0",
+    "@modular-forms/solid": "^0.25.1",
     "@solid-primitives/destructure": "^0.1.17",
     "@solid-primitives/i18n": "^2.2.0",
     "@solidjs/meta": "^0.29.4",
-    "@solidjs/router": "^0.14.10",
-    "@solidjs/start": "^1.1.2",
-    "@tanstack/solid-query": "^5.66.11",
-    "@tanstack/solid-query-devtools": "^5.66.11",
+    "@solidjs/router": "^0.15.3",
+    "@solidjs/start": "^1.1.3",
+    "@tanstack/solid-query": "^5.67.1",
+    "@tanstack/solid-query-devtools": "^5.67.1",
     "arktype": "^2.1.2",
-    "daisyui": "^4.12.24",
+    "daisyui": "^5.0.0",
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
     "radash": "^12.1.0",
@@ -44,12 +43,11 @@
     "solid-js": "^1.9.5",
     "solid-popper": "^0.3.0",
     "solid-radix-icons": "^1.0.0",
-    "tailwind-merge": "^2.6.0",
-    "valibot": "0.38.0"
+    "tailwind-merge": "^3.0.2",
+    "valibot": "1.0.0-rc.3"
   },
   "devDependencies": {
-    "oxlint": "^0.9.10",
-    "typescript": "^5.8.2",
+    "oxlint": "^0.15.13",
     "vite": "^6.2.0",
     "vite-plugin-solid": "^2.11.6",
     "@faker-js/faker": "^9.5.1",
@@ -59,16 +57,15 @@
     "@tanstack/eslint-plugin-query": "^5.66.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/user-event": "^14.6.1",
-    "@types/ramda": "^0.30.2",
-    "@vitest/browser": "^2.1.9",
+    "@vitest/browser": "^3.0.7",
     "babel-preset-solid": "^1.9.5",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-perfectionist": "^3.9.1",
+    "eslint-plugin-perfectionist": "^4.9.0",
     "eslint-plugin-solid": "^0.14.5",
-    "jsdom": "^25.0.1",
+    "jsdom": "^26.0.0",
     "playwright": "^1.50.1",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "solid-devtools": "^0.30.1",
+    "solid-devtools": "^0.33.0",
     "tailwindcss": "^4.0.9",
     "vite-tsconfig-paths": "^5.1.4"
   }
