--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -85,6 +85,7 @@ iso8601-duration = { version = "0.2", features = [
 itertools.workspace = true
 juniper.workspace = true
 juniper_axum.workspace = true
+rand = "0.9.0"
 regex = "1.11"
 sea-orm.workspace = true
 serde.workspace = true
