--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@touhouclouddb/web",
-  "private": true,
+  "type": "module",
   "scripts": {
     "start": "vite",
     "dev": "vite",
@@ -15,9 +15,10 @@
     "test::vite": "bun vitest run",
     "test::bun": "bun test ./**/*.buntest.ts",
     "test": "bun run test::dom && bun run test::bun",
-    "pre-push": "bun run check && bun run lint"
+    "pre-push": "bun run check && bun run lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
-  "type": "module",
   "dependencies": {
     "@ark/attest": "^0.43.2",
     "@auth/core": "^0.38.0",
@@ -44,37 +45,51 @@
     "valibot": "1.0.0-rc.3"
   },
   "devDependencies": {
-    "eslint-config-prettier": "^10.0.2",
-    "@types/eslint-config-prettier": "^6.11.3",
-    "eslint-plugin-oxlint": "^0.15.13",
+    "@chromatic-com/storybook": "^3.2.5",
     "@eslint/js": "^9.21.0",
-    "@types/eslint__js": "^9.14.0",
-    "eslint": "^9.21.0",
-    "husky": "^9.1.7",
-    "prettier": "^3.5.3",
-    "typescript": "^5.8.2",
-    "globals": "^16.0.0",
-    "typescript-eslint": "^8.26.0",
-    "oxlint": "^0.15.13",
-    "vite": "^6.2.0",
-    "vite-plugin-solid": "^2.11.6",
     "@faker-js/faker": "^9.5.1",
     "@solidjs/testing-library": "^0.8.10",
+    "@storybook/addon-essentials": "^8.6.3",
+    "@storybook/addon-interactions": "^8.6.3",
+    "@storybook/blocks": "^8.6.3",
+    "@storybook/test": "^8.6.3",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/vite": "^4.0.9",
     "@tanstack/eslint-plugin-query": "^5.66.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/user-event": "^14.6.1",
+    "@types/eslint-config-prettier": "^6.11.3",
+    "@types/eslint__js": "^9.14.0",
     "@vitest/browser": "^3.0.7",
     "babel-preset-solid": "^1.9.5",
+    "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-oxlint": "^0.15.13",
     "eslint-plugin-perfectionist": "^4.9.0",
     "eslint-plugin-solid": "^0.14.5",
+    "eslint-plugin-storybook": "^0.11.3",
+    "globals": "^16.0.0",
+    "husky": "^9.1.7",
     "jsdom": "^26.0.0",
+    "oxlint": "^0.15.13",
     "playwright": "^1.50.1",
+    "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "solid-devtools": "^0.33.0",
+    "storybook": "^8.6.3",
+    "storybook-solidjs": "^1.0.0-beta.6",
+    "storybook-solidjs-vite": "^1.0.0-beta.6",
     "tailwindcss": "^4.0.9",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.0",
+    "vite": "^6.2.0",
+    "vite-plugin-solid": "^2.11.6",
     "vite-tsconfig-paths": "^5.1.4"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
   }
 }
