--- a/web/.vscode/settings.json
+++ b/web/.vscode/settings.json
@@ -2,6 +2,9 @@
   "files.exclude": {
     ".eslintcache": true
   },
+  "[typescript]": {
+    "typescript.preferences.importModuleSpecifierEnding": "minimal"
+  },
   // tailwind
   "tailwindCSS.classAttributes": ["class", "class:list", "twMerge"],
   "tailwindCSS.experimental.classRegex": [
