Fix vscode settings

--- a/web/.vscode/settings.json
+++ b/web/.vscode/settings.json
@@ -2,9 +2,7 @@
   "files.exclude": {
     ".eslintcache": true
   },
-  "[typescript]": {
-    "typescript.preferences.importModuleSpecifierEnding": "minimal"
-  },
+  "typescript.preferences.importModuleSpecifierEnding": "minimal",
   // tailwind
   "tailwindCSS.classAttributes": ["class", "class:list", "twMerge"],
   "tailwindCSS.experimental.classRegex": [
