Add open api code-gen and open api query client

--- a/web/package.json
+++ b/web/package.json
@@ -35,6 +35,8 @@
     "daisyui": "^5.0.0",
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
+    "openapi-fetch": "^0.13.5",
+    "openapi-react-query": "^0.3.1",
     "radash": "^12.1.0",
     "solid-floating-ui": "^0.3.1",
     "solid-js": "^1.9.5",
@@ -75,6 +77,7 @@
     "globals": "^16.0.0",
     "husky": "^9.1.7",
     "jsdom": "^26.0.0",
+    "openapi-typescript": "^7.6.1",
     "oxlint": "^0.15.13",
     "playwright": "^1.50.1",
     "prettier": "^3.5.3",
